--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "openai": "^4.55.5",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^16.8.0",
     "tailwind-merge": "^2.5.1",
     "tailwindcss-animate": "^1.0.7"
   },
